--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -1007,9 +1007,9 @@
 \DeclareKeys[session]
 {
   % titlesep = <sep>
-  titlesep.store = \@sestitlesep,
+  titlesep.code = { \csdef{@sestitlesep}{{#1}} },
   % subtitle = <title>
-  subtitle.store = \@sessubtitle,
+  subtitle.code = { \csdef{@sessubtitle}{{#1}} },
   % shorttitle = <title>
   shorttitle.code = {
     \csdef{@sesshorttitle}{{#1}}
@@ -1018,7 +1018,7 @@
   % bibsec = <keyword>
   bibsec.store = \@sesbibsec,
   % room = <room>
-  room.store = \@sesroom,
+  room.code = { \csdef{@sesroom}{{#1}} },
   % starttime = <starttime>
   starttime.code = {
     \csdef{@sesrtime}{#1}
@@ -1042,7 +1042,7 @@
     \toggletrue{shortinstrdef}
   },
   % presstudents = <instructor>
-  presstudents.store = \@sespresstudents,
+  presstudents.code = { \csdef{@sespresstudents}{{#1}} },
   % cancel = <true|false>
   cancel.if = @jslp@session@cancel,
   % draft = <true|false>
