--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -1440,6 +1440,7 @@ the \jslp\ style files. Thanks, Dominik.
 \item Forthcoming (v. 1.13):
 \begin{itemize}
 	\item Use legacy keyvals rather than \textsf{xkeyval}.
+	\item Fix row spacing in membertable.
 \end{itemize}
 \item 2020/12/08 (v. 1.12):
 	\begin{itemize}
