revert unintended change

--- a/jsmembertable.sty
+++ b/jsmembertable.sty
@@ -125,7 +125,7 @@
 \providecommand*\jsemailheader{\textbf{E-Mail-Adresse}}
 
 % 4.) Signature advice
-\providecommand*\jssigheader{Unterschrift Teilnehmer:innen}
+\providecommand*\jssigheader{Unterschrift Teilnehmer*innen}
 
 
 %
