--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -87,7 +87,7 @@ colorlinks=false
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.13dev, 2022/10/05}
+\date{Version 1.13, 2024/03/06}
 
 \maketitle
 
@@ -1437,10 +1437,10 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item Forthcoming (v. 1.13):
+\item 2024/03/06 (v. 1.13):
 \begin{itemize}
 	\item Use legacy keyvals rather than \textsf{xkeyval}.
-	\item Fix row spacing in membertable.
+	\item Fix row spacing in prestables.
 \end{itemize}
 \item 2020/12/08 (v. 1.12):
 	\begin{itemize}
