--- a/jsmembertable.sty
+++ b/jsmembertable.sty
@@ -24,8 +24,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2024/03/05}
-\def\fileversion{1.13dev}
+\def\filedate{2024/03/06}
+\def\fileversion{1.13}
 \def\filename{jsmembertable.sty}
 
 \NeedsTeXFormat{LaTeX2e}
