Add way to generate programs with session instructors
(\makeprogram* and instructors=true with \makebeamerprogram)

--- a/README
+++ b/README
@@ -69,6 +69,8 @@ instructions; also have a look at the example files.
 == CHANGES ==
 
 * V. 1.14 (forthcoming): - Add jsmembertable/followuptable/before LaTeX hook (jsmembertable).
+                         - Add way to generate programs with session instructors (\makeprogram* and
+                           instructors=true with \makebeamerprogram).
 
 * V. 1.13 (2024-03-06):  - use legacy keyvals rather than xkeyval.
                          - fix row spacing in prestables.
