amend 81190725f9321 once more

--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -711,7 +711,7 @@
   % uncover = <true|false>
   uncover.if = @jslp@beamerprogram@uncover,
   % instructors = <true|false>
-  uncover.if = @jslp@beamerprogram@instr
+  instructors.if = @jslp@beamerprogram@instr
 }
 
 % Overlay specifications for uncover programs
