Add Vít Starý Novotný to the credits

--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -1440,6 +1440,7 @@ The time span calculation uses code provided by Christian Hupfer at
 Thank you, Herbert, Enrico and Christian!
 Richard Zach provided a fix and enhancement to \jcsmacro{SetAutoOffset} and code to customize
 the program list. Many thanks for this.
+Vít Starý Novotný made me aware of some \textsf{expl3} coding flaws -- thank you!
 Finally, Dominik Waßenhoven tested the package and provided
 me with multiple suggestions, which effectively manifested in major new features such as
 the \jslp\ style files. Thanks, Dominik.
@@ -1447,6 +1448,10 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
+\item Forthcoming (v.\,1.15):
+\begin{itemize}
+	\item Fix some expl3 code.
+\end{itemize}
 \item 2025/01/29 (v.\,1.14):
 \begin{itemize}
 	\item Add \texttt{jsmembertable/followuptable/before} \LaTeX\ hook.
